# tess-backml

./: .gitignore  404.html  CHANGES.md  Makefile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml
.github/workflows/: deploy-mkdocs.yaml  mypy.yml  pypi-publish.yaml  pytest.yaml  ruff.yaml  ruff.yml  test.yml
bkg_data/: index.html
corrector/: index.html
docs/: README.md  bkg_data.md  corrector.md  index.md  t1_bkgcube.ipynb  t2_slcube.ipynb  tutorial_2.ipynb  utils.md
notebooks/: plot_tess_camera_bkg.ipynb  test_backgroundcube.ipynb  test_corrector.ipynb  test_dataset_class.ipynb
search/: search_index.json
src/: build_dataset.py  make_sl_cube.py
src/tess_backml/: __init__.py  bkg_data.py  corrector.py  utils.py
src/tess_backml/data/: dark_frame_indices_tess_ffi.pkl
src/tess_backml/database/: __init__.py  bkg_data.py  utils.py
src/tess_backml/database/data/: dark_frame_indices_tess_ffi.pkl
src/tess_backml_td/: bkg_data.py  utils.py
t1_bkgcube/: index.html
t2_slcube/: index.html
t3_slcorrector/: index.html
tests/: test_bkg_data.py  test_corrector.py
tests/data/: ffi_sl_cube_sector002_1-1_test.fits
tutorial_2/: index.html
utils/: index.html
